--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -899,6 +899,7 @@ deny 23.137.253.27;
 deny 23.137.254.244;
 deny 23.151.8.8;
 deny 23.184.48.78;
+deny 23.190.216.8;
 deny 23.191.200.10;
 deny 23.191.200.11;
 deny 23.191.200.12;
@@ -909,6 +910,7 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
+deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -916,7 +918,6 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
-deny 23.191.200.3;
 deny 23.191.200.4;
 deny 23.191.200.6;
 deny 23.191.200.7;
@@ -959,6 +960,7 @@ deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
 deny 2602:f6f6:2:dc17::1;
 deny 2602:f915:f:3b43::1;
+deny 2602:fa86::be24:11ff:fe70:fc41;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
@@ -1488,6 +1490,7 @@ deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:231b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:5c50::1;
+deny 2a0f:9400:7e11:887f::1;
 deny 2a0f:cdc6:500:11e3::2;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
