--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -134,6 +134,7 @@ deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
 deny 2602:f6f6:2:dc17::1;
 deny 2602:f915:f:3b43::1;
+deny 2602:fa86::be24:11ff:fe70:fc41;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
@@ -662,6 +663,7 @@ deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:231b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:5c50::1;
+deny 2a0f:9400:7e11:887f::1;
 deny 2a0f:cdc6:500:11e3::2;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
