--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -217,7 +217,6 @@ allow 2605:a140:2262:7686::1;
 allow 2605:a141:2261:4410::1;
 allow 2605:a142:2263:1906::1;
 allow 2605:aa80:0:9::3;
-allow 2605:e440:3::3ef;
 allow 2607:5300:201:3100::35c5;
 allow 2607:5300:205:200::4894;
 allow 2607:f530:9002::19;
@@ -411,6 +410,7 @@ allow 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:52c0:139:f7a5::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
