--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -9,6 +9,7 @@ allow 103.164.54.199;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.20.241.102;
+allow 103.209.42.137;
 allow 103.251.167.10;
 allow 103.253.24.18;
 allow 103.28.52.93;
@@ -451,6 +452,7 @@ allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
+allow 185.231.33.38;
 allow 185.233.100.23;
 allow 185.235.146.29;
 allow 185.241.208.115;
@@ -915,6 +917,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -923,8 +926,9 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
+allow 23.191.200.28;
+allow 23.191.200.29;
 allow 23.191.200.3;
-allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
@@ -1426,6 +1430,7 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:4d00:0:b::2;
 allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
