--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -461,7 +461,9 @@ set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
 set_real_ip_from 185.241.208.206;
 set_real_ip_from 185.241.208.54;
+set_real_ip_from 185.241.208.71;
 set_real_ip_from 185.241.208.81;
+set_real_ip_from 185.241.208.82;
 set_real_ip_from 185.244.192.175;
 set_real_ip_from 185.244.192.184;
 set_real_ip_from 185.246.128.161;
@@ -620,7 +622,6 @@ set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 196.196.200.100;
 set_real_ip_from 196.251.84.71;
-set_real_ip_from 198.167.206.195;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -716,9 +717,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:6;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
-set_real_ip_from 2001:67c:e28:1::2;
-set_real_ip_from 2001:67c:e28:1::3;
-set_real_ip_from 2001:67c:e28:1::4;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:191;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:192;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:193;
@@ -923,11 +921,11 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
-set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.5;
+set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -951,6 +949,7 @@ set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 2.58.56.93;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
+set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
@@ -1537,8 +1536,11 @@ set_real_ip_from 2a12:a800:2:1:185:241:208:185;
 set_real_ip_from 2a12:a800:2:1:185:241:208:202;
 set_real_ip_from 2a12:a800:2:1:185:241:208:204;
 set_real_ip_from 2a12:a800:2:1:185:241:208:206;
+set_real_ip_from 2a12:a800:2:1:185:241:208:71;
 set_real_ip_from 2a12:a800:2:1:185:241:208:81;
+set_real_ip_from 2a12:a800:2:1:185:241:208:82;
 set_real_ip_from 2a12:a800:2:1:45:138:16:107;
+set_real_ip_from 2a12:a800:2:1:45:138:16:113;
 set_real_ip_from 2a12:a800:2:1:45:138:16:164;
 set_real_ip_from 2a12:a800:2:1:45:138:16:222;
 set_real_ip_from 2a12:a800:2:1:45:138:16:230;
@@ -1547,21 +1549,28 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:239;
 set_real_ip_from 2a12:a800:2:1:45:138:16:240;
 set_real_ip_from 2a12:a800:2:1:45:138:16:248;
 set_real_ip_from 2a12:a800:2:1:45:138:16:42;
+set_real_ip_from 2a12:a800:2:1:45:138:16:69;
 set_real_ip_from 2a12:a800:2:1:45:138:16:76;
+set_real_ip_from 2a12:a800:2:1:45:141:215:110;
 set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
 set_real_ip_from 2a12:a800:2:1:45:141:215:169;
 set_real_ip_from 2a12:a800:2:1:45:141:215:17;
 set_real_ip_from 2a12:a800:2:1:45:141:215:19;
+set_real_ip_from 2a12:a800:2:1:45:141:215:200;
 set_real_ip_from 2a12:a800:2:1:45:141:215:21;
 set_real_ip_from 2a12:a800:2:1:45:141:215:238;
 set_real_ip_from 2a12:a800:2:1:45:141:215:28;
 set_real_ip_from 2a12:a800:2:1:45:141:215:40;
 set_real_ip_from 2a12:a800:2:1:45:141:215:56;
 set_real_ip_from 2a12:a800:2:1:45:141:215:61;
+set_real_ip_from 2a12:a800:2:1:45:141:215:62;
+set_real_ip_from 2a12:a800:2:1:45:141:215:63;
 set_real_ip_from 2a12:a800:2:1:45:141:215:80;
 set_real_ip_from 2a12:a800:2:1:45:141:215:88;
 set_real_ip_from 2a12:a800:2:1:45:141:215:90;
+set_real_ip_from 2a12:a800:2:1:45:141:215:95;
+set_real_ip_from 2a12:a800:2:1:45:141:215:97;
 set_real_ip_from 2a12:a800:2:1:45:80:158:167;
 set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:a800:2:1:45:80:158:69;
@@ -1637,6 +1646,7 @@ set_real_ip_from 45.137.70.158;
 set_real_ip_from 45.137.99.16;
 set_real_ip_from 45.137.99.182;
 set_real_ip_from 45.138.16.107;
+set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.164;
 set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
@@ -1645,21 +1655,28 @@ set_real_ip_from 45.138.16.239;
 set_real_ip_from 45.138.16.240;
 set_real_ip_from 45.138.16.248;
 set_real_ip_from 45.138.16.42;
+set_real_ip_from 45.138.16.69;
 set_real_ip_from 45.138.16.76;
+set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
 set_real_ip_from 45.141.215.169;
 set_real_ip_from 45.141.215.17;
 set_real_ip_from 45.141.215.19;
+set_real_ip_from 45.141.215.200;
 set_real_ip_from 45.141.215.21;
 set_real_ip_from 45.141.215.238;
 set_real_ip_from 45.141.215.28;
 set_real_ip_from 45.141.215.40;
 set_real_ip_from 45.141.215.56;
 set_real_ip_from 45.141.215.61;
+set_real_ip_from 45.141.215.62;
+set_real_ip_from 45.141.215.63;
 set_real_ip_from 45.141.215.80;
 set_real_ip_from 45.141.215.88;
 set_real_ip_from 45.141.215.90;
+set_real_ip_from 45.141.215.95;
+set_real_ip_from 45.141.215.97;
 set_real_ip_from 45.143.200.32;
 set_real_ip_from 45.145.93.133;
 set_real_ip_from 45.148.10.111;
@@ -1769,9 +1786,6 @@ set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
 set_real_ip_from 62.72.47.105;
 set_real_ip_from 64.190.113.221;
-set_real_ip_from 64.190.76.2;
-set_real_ip_from 64.190.76.3;
-set_real_ip_from 64.190.76.4;
 set_real_ip_from 64.94.85.248;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
@@ -1779,6 +1793,7 @@ set_real_ip_from 66.78.40.182;
 set_real_ip_from 66.94.111.228;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
+set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
 set_real_ip_from 72.5.43.62;
