--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -657,6 +657,7 @@ allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
+allow 2001:41d0:305:2100::4ede;
 allow 2001:41d0:601:1100::26d0;
 allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:601:1100::6f85;
@@ -915,7 +916,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -924,11 +924,8 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.28;
 allow 23.191.200.29;
-allow 23.191.200.3;
 allow 23.191.200.30;
-allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -1597,6 +1594,7 @@ allow 2a12:bec4:1821:3a7::a;
 allow 2a12:bec4:1821:3a8::a;
 allow 2a12:de40:21:1be4::;
 allow 2a14:1ec7:1000:a633::1;
+allow 2a14:7583:f607::;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
@@ -1638,6 +1636,7 @@ allow 38.97.116.243;
 allow 38.97.116.244;
 allow 38.97.116.245;
 allow 43.160.194.14;
+allow 44.30.4.69;
 allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
@@ -1748,6 +1747,7 @@ allow 51.15.59.15;
 allow 51.161.198.74;
 allow 51.222.142.67;
 allow 51.38.225.46;
+allow 51.68.226.107;
 allow 5.181.177.130;
 allow 5.181.177.245;
 allow 51.81.222.62;
@@ -1868,6 +1868,7 @@ allow 89.147.110.154;
 allow 89.147.110.211;
 allow 89.147.110.82;
 allow 89.147.111.87;
+allow 89.185.82.63;
 allow 89.234.157.254;
 allow 89.58.26.216;
 allow 89.58.41.156;
