--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -9,6 +9,7 @@ allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
+allow 2001:41d0:305:2100::4ede;
 allow 2001:41d0:601:1100::26d0;
 allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:601:1100::6f85;
@@ -755,5 +756,6 @@ allow 2a12:bec4:1821:3a7::a;
 allow 2a12:bec4:1821:3a8::a;
 allow 2a12:de40:21:1be4::;
 allow 2a14:1ec7:1000:a633::1;
+allow 2a14:7583:f607::;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:d::d28b;
