--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -9,6 +9,7 @@ deny 2001:41d0:2:9161::1;
 deny 2001:41d0:304:200::3348;
 deny 2001:41d0:304:200::3ea4;
 deny 2001:41d0:304:200::9dce;
+deny 2001:41d0:305:2100::4ede;
 deny 2001:41d0:601:1100::26d0;
 deny 2001:41d0:601:1100::6524;
 deny 2001:41d0:601:1100::6f85;
@@ -755,5 +756,6 @@ deny 2a12:bec4:1821:3a7::a;
 deny 2a12:bec4:1821:3a8::a;
 deny 2a12:de40:21:1be4::;
 deny 2a14:1ec7:1000:a633::1;
+deny 2a14:7583:f607::;
 deny 2c0f:6c0:0:2::6983;
 deny 2c0f:6c0:0:d::d28b;
