--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -657,6 +657,7 @@ set_real_ip_from 2001:41d0:2:9161::1;
 set_real_ip_from 2001:41d0:304:200::3348;
 set_real_ip_from 2001:41d0:304:200::3ea4;
 set_real_ip_from 2001:41d0:304:200::9dce;
+set_real_ip_from 2001:41d0:305:2100::4ede;
 set_real_ip_from 2001:41d0:601:1100::26d0;
 set_real_ip_from 2001:41d0:601:1100::6524;
 set_real_ip_from 2001:41d0:601:1100::6f85;
@@ -915,7 +916,6 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
-set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -924,11 +924,8 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
-set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
-set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
@@ -1597,6 +1594,7 @@ set_real_ip_from 2a12:bec4:1821:3a7::a;
 set_real_ip_from 2a12:bec4:1821:3a8::a;
 set_real_ip_from 2a12:de40:21:1be4::;
 set_real_ip_from 2a14:1ec7:1000:a633::1;
+set_real_ip_from 2a14:7583:f607::;
 set_real_ip_from 2c0f:6c0:0:2::6983;
 set_real_ip_from 2c0f:6c0:0:d::d28b;
 set_real_ip_from 31.129.22.65;
@@ -1638,6 +1636,7 @@ set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 38.97.116.245;
 set_real_ip_from 43.160.194.14;
+set_real_ip_from 44.30.4.69;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
@@ -1748,6 +1747,7 @@ set_real_ip_from 51.15.59.15;
 set_real_ip_from 51.161.198.74;
 set_real_ip_from 51.222.142.67;
 set_real_ip_from 51.38.225.46;
+set_real_ip_from 51.68.226.107;
 set_real_ip_from 5.181.177.130;
 set_real_ip_from 5.181.177.245;
 set_real_ip_from 51.81.222.62;
@@ -1868,6 +1868,7 @@ set_real_ip_from 89.147.110.154;
 set_real_ip_from 89.147.110.211;
 set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.87;
+set_real_ip_from 89.185.82.63;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.58.26.216;
 set_real_ip_from 89.58.41.156;
