--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -9,7 +9,6 @@ set_real_ip_from 103.164.54.199;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.20.241.102;
-set_real_ip_from 103.209.42.137;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.253.24.18;
 set_real_ip_from 103.28.52.93;
@@ -812,6 +811,7 @@ set_real_ip_from 23.129.64.135;
 set_real_ip_from 23.129.64.136;
 set_real_ip_from 23.129.64.137;
 set_real_ip_from 23.129.64.138;
+set_real_ip_from 23.129.64.139;
 set_real_ip_from 23.129.64.140;
 set_real_ip_from 23.129.64.141;
 set_real_ip_from 23.129.64.142;
@@ -927,9 +927,10 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.28;
-set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
+set_real_ip_from 23.191.200.31;
+set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
@@ -1070,6 +1071,7 @@ set_real_ip_from 2620:18c:0:192::e0:135;
 set_real_ip_from 2620:18c:0:192::e0:136;
 set_real_ip_from 2620:18c:0:192::e0:137;
 set_real_ip_from 2620:18c:0:192::e0:138;
+set_real_ip_from 2620:18c:0:192::e0:139;
 set_real_ip_from 2620:18c:0:192::e0:140;
 set_real_ip_from 2620:18c:0:192::e0:141;
 set_real_ip_from 2620:18c:0:192::e0:142;
@@ -1872,7 +1874,6 @@ set_real_ip_from 89.147.110.154;
 set_real_ip_from 89.147.110.211;
 set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.87;
-set_real_ip_from 89.185.82.63;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.58.26.216;
 set_real_ip_from 89.58.41.156;
